# fx-notifier

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.template  fx_bot.py  pyproject.toml  requirements.txt
.github/workflows/: fx-notifier.yml
scripts/: fx_test.py  run_checks.ps1  run_checks.sh  telegram_test.py  validate_message.py
src/fx_notifier/: __init__.py  __main__.py  config.py
src/fx_notifier/app/: __init__.py  workflows.py
src/fx_notifier/domain/: __init__.py  errors.py
src/fx_notifier/infrastructure/: __init__.py  frankfurter.py  telegram.py
src/fx_notifier/services/: __init__.py  fx.py  reporting.py
tests/: conftest.py  test_cli.py  test_fx.py  test_fx_bot.py  test_integration.py  test_send_on_fetch_failure.py
tests/unit/: test_config.py  test_fx_service.py  test_reporting.py  test_telegram.py  test_workflows.py
